# cmake-modules

./: .dir-locals.el  .gitignore  CHANGELOG.org  CMakeLists.txt  FindAndLog.cmake  LICENSE  README.org
cmake/: .gitignore  CMakeLists.txt  Mister00XCMakeModulesConfig.cmake.in  is-project-toplevel.cmake
